--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon -e js,html,nj,json ./bin/www"
+    "dev": "nodemon -e js,njk,json ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
