--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
+    "fs-extra": "^9.0.0",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.16",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "nunjucks": "^3.2.1",
     "startbootstrap-sb-admin-2": "^4.0.7"
