--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "busboy-body-parser": "^0.3.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -19,6 +20,7 @@
     "mongoose": "^5.9.16",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "multiparty": "^4.2.1",
     "nodemon": "^2.0.4",
     "nunjucks": "^3.2.1",
     "startbootstrap-sb-admin-2": "^4.0.7"
